--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                     <h3 class="mb-4 h4 font-weight-bold"> Why JVT? </h3>
                     
                     <p class="info"> 
-                        Jumeirah Lake Towers (JLT) offers a vibrant urban lifestyle with serene waterfront views. Featuring a mix of apartments, offices, and retail spaces, it’s perfect for professionals and families alike. Surrounded by lush landscapes and lakes, JLT provides easy access to key destinations, blending convenience with a peaceful environment in the heart of Dubai.
+                        Jumeirah Village Triangle (JVT) is a great investment opportunity, offering affordable property prices and high rental yields. Its strategic location near key areas like Dubai Marina and JLT, combined with family-friendly amenities like parks, schools, and retail outlets, makes it attractive to families and professionals. With freehold ownership and strong growth potential, JVT is a smart choice for investors seeking value and long-term returns.
                     </p>
                 </div>
                 <div class="col-lg-6 order-0 order-lg-1 mb-4 mb-lg-0"> 
