--- a/index-ar.html
+++ b/index-ar.html
@@ -12,10 +12,11 @@
     <meta name='author' content="majdemasmas" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#0073bc">
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="./images/header-image.jpg" />
-    <meta property="og:title" content="غوزيل تاورز | ISTHOMES" />
-    <meta property="og:description" content="غوزيل تاورز من تايجر" />
+    <meta name="og:type" content="website" />
+    <meta name="og:image" content="/images/header-image.webp" />
+    <meta name="og:image:alt" content="غوزيل تاورز">
+    <meta name="og:title" content="غوزيل تاورز | ISTHOMES" />
+    <meta name="og:description" content="غوزيل تاورز من تايجر" />
     <title>غوزيل تاورز | ISTHOMES</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,7 +33,7 @@
     </noscript>
     <link rel="stylesheet" href="./style.min.css?v=4">
 
-    <link rel="preload" as="image" fetchpriority="high" href="./images/header-image.jpg" />
+    <link rel="preload" as="image" href="./images/header-image.webp" />
 </head>
 
 <body class="rtl">
@@ -41,7 +42,7 @@
             <img src="./images/logo.webp" alt="logo">
         </div>
         <div class="video-overlay"></div>
-        <img class="bg-image" src="./images/header-image.jpg" alt="غوزيل تاورز">
+        <img class="bg-image" src="./images/header-image.webp" alt="غوزيل تاورز">
         <div class="contain">
             <div class="container">
                 <h1>غوزيل تاورز من تايجر</h1>
