--- a/index-en.html
+++ b/index-en.html
@@ -12,10 +12,11 @@
     <meta name='author' content="majdemasmas" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#0073bc">
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="./images/header-image.jpg" />
-    <meta property="og:title" content="Guzel Towers | ISTHOMES" />
-    <meta property="og:description" content="Jumeirah Village Triangle (JVT)" />
+    <meta name="og:type" content="website" />
+    <meta name="og:image" content="/images/header-image.webp" />
+    <meta name="og:image:alt" content="Guzel Towers">
+    <meta name="og:title" content="Guzel Towers | ISTHOMES" />
+    <meta name="og:description" content="Jumeirah Village Triangle (JVT)" />
     <title>Guzel Towers | ISTHOMES</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,7 +35,7 @@
     </noscript>
     <link rel="stylesheet" href="./style.min.css?v=4">
 
-    <link rel="preload" as="image" fetchpriority="high" href="./images/header-image.jpg" />
+    <link rel="preload" as="image" href="./images/header-image.webp" />
 </head>
 
 <body>
@@ -43,7 +44,7 @@
             <img src="./images/logo.webp" alt="logo">
         </div>
         <div class="video-overlay"></div>
-        <img class="bg-image" src="./images/header-image.jpg" alt="Guzel Towers">
+        <img class="bg-image" src="./images/header-image.webp" alt="Guzel Towers">
         <div class="contain">
             <div class="container">
                 <h1>Guzel Towers By Tiger</h1>
