--- a/index-fa.html
+++ b/index-fa.html
@@ -231,7 +231,7 @@
 
     <section class="why-project">
         <div class="container">
-            <h2 class="main-title mb-4 mb-lg-5 text-center"> جامعه </h2>
+            <h2 class="main-title mb-4 mb-lg-5 text-center"> شهرک </h2>
             <div class="row">
                 <div class="col-lg-6 order-1 order-lg-0">
                     <h3 class="mb-4 h4 font-weight-bold"> چرا JVT؟ </h3>
