--- a/index-tr.html
+++ b/index-tr.html
@@ -347,7 +347,7 @@
 
                         <div class="col-12 d-flex justify-column-center px-lg-1">
                             <button type="submit" class="btn-send submit-form font-weight-bold btn-block">
-                                <span>Göndermek</span>
+                                <span>Gönder</span>
                             </button>
                         </div>
                     </div>
@@ -421,7 +421,7 @@
 
                         <div class="col-12 d-flex justify-column-center px-lg-1">
                             <button type="submit" class="btn-send submit-form font-weight-bold btn-block">
-                                <span>Göndermek</span>
+                                <span>Gönder</span>
                             </button>
                         </div>
                     </div>
